--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet" />
     <title>React App</title>
+    <style>
+      body {
+        margin: 0;
+        background-color: #fcf9f5;
+        font-family: "NanumGothic";
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
