--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <title>React App</title>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap");
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
