--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-gothic.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <title>React App</title>
     <style>
       body {
         margin: 0;
         background-color: #fcf9f5;
-        font-family: "NanumGothic";
+        font-family: "Noto Sans KR";
       }
     </style>
   </head>
