--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app" />
     <link rel="/manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>TEENY BOX</title>
   </head>
   <body>
+    <!-- public : static 파일 모아놓는곳. (html,image 파일 보관 시) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
