Fix : reset CDN 추가 및 index.html 파일 내용 변경 커밋

--- a/public/index.html
+++ b/public/index.html
@@ -18,17 +18,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- reset.css CDN -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
+    <link rel="stylesheet" href="../src/index.css" />
     <title>Teeny Box - 연극 티켓 예매 사이트</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: #fcf9f5;
-        font-family: "Nanum Gothic";
-      }
-    </style>
+
+    
   </head>
   <body>
-    <!-- public : static 파일 모아놓는곳. (html,image 파일 보관 시) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
