--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
     <link rel="stylesheet" href="../src/index.css" />
-    <title>Teeny Box - 연극 티켓 예매 사이트</title>
+    <title>Teeny Box - 연극 정보 사이트</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
